# mpeditor

./: .codexignore  .gitignore  CLAUDE.md  LICENSE  Privacy.md  README.md  README.zh-CN.md  Terms.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.codex/: config.yml
.github/workflows/: rebuild-latest-json.yml  release.yml
scripts/: generate-latest-json.mjs
src/: App.css  App.tsx  defaultContent.ts  index.css  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cover.rs  git.rs  local_library.rs  mod.rs  wechat.rs
src-tauri/src/plugins/: system_tray.rs
src/components/: CoverGeneratorDialog.tsx  DeviceFrame.tsx  EditorPanel.tsx  GitContentTree.tsx  Header.tsx  LocalContentTree.tsx  PreviewPanel.tsx  SettingsDialog.tsx  ThemeSelector.tsx  Toolbar.tsx  WorkspaceSidebar.tsx  WorkspaceTreeEntryMenu.tsx  WorkspaceTreeRows.tsx  language-toggle.tsx  main-title-bar.tsx  mode-toggle.tsx  shortcut-input.tsx  title-bar.tsx  updater-dialog.tsx
src/hooks/: use-app-ui-actions.ts  use-copy-actions.ts  use-git-file-actions.ts  use-git-repo-manager.ts  use-git-repo-wizard.ts  use-git-repository-library.ts  use-git-sidebar-state.ts  use-local-content-tree.ts  use-local-storage-persistence.ts  use-local-workspace-actions.ts  use-preview-render.ts  use-publish-actions.ts  use-scroll-sync.ts  use-settings-draft-manager.ts  use-updater.ts  use-wechat-account-manager.ts  use-workspace-documents.ts
(+32 files in other folders)
